--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "^1.7.3",
     "koa-compose": "^4.1.0",
     "methods": "^1.1.2",
+    "nodemon": "^2.0.15",
     "path-to-regexp": "^6.1.0"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "docs": "NODE_ENV=test jsdoc2md -t ./lib/API_tpl.hbs --src ./lib/*.js  >| API.md",
     "test": "mocha test/**/*.js",
     "coverage": "nyc npm run test",
-    "bench": "make -C bench"
+    "bench": "make -C bench",
+    "myTest": "DEBUG=* nodemon ./myTest/test01.js"
   }
 }
